@@ -162,6 +162,23 @@ has surgical => (
 
 =item *
 
+C<max_target_perl> is the highest minimum version of perl you intend to require.
+This is passed to L<Dist::Zilla::Plugin::Test::MinimumVersion>, which generates
+a F<minimum-version.t> test that'll warn you if you accidentally used features
+from a higher version of perl than you wanted. (Having a lower required version
+of perl is okay.)
+
+=cut
+
+has max_target_perl => (
+    is => 'ro',
+    isa => 'Str',
+    lazy => 1,
+    default => sub { $_[0]->payload->{max_target_perl} // '5.10.1' },
+);
+
+=item *
+
 C<changelog> is the filename of the changelog.
 
 Default is F<Changes>.
@@ -337,6 +354,7 @@ has noindex_dirs => (
     lazy => 1,
     default => sub { $_[0]->payload->{noindex_dirs} // [qw(corpus inc examples)] },
 );
+
 
 sub mvp_multivalue_args { qw(push_to release_to disable_tests enable_tests) }
 
@@ -514,7 +532,8 @@ L<CheckExtraTests|Dist::Zilla::Plugin::CheckExtraTests>.
             changelog       => $self->changelog,
             has_version     => $self->has_version,
             strict_version  => $self->strict_version,
-            ($self->critic_config ? (critic_config => $self->critic_config) : ()),
+            max_target_perl => $self->max_target_perl,
+            (critic_config  => $self->critic_config)x!!$self->critic_config,
         }
      );
 
